Update Llama Vision config - remove deprecated Groq, recommend Together AI

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Llama Vision API Configuration (REQUIRED for image analysis)
+# Get a free API key from https://together.ai
+LLAMA_API_KEY=your_together_ai_api_key
+LLAMA_PROVIDER=together
+
 # EMDEX API Configuration
 # Copy this file to .env and fill in your credentials
 
